# ms_graph

./: .gitignore  README.md
source/: main.py  pyproject.toml
source/app/data/: schemas.py
source/app/modules/: ms_graph.py
source/tests/: conftest.py  mocks.py
source/tests/tests_ms_graph/: test_ms_graph.py
