[tool.poetry]
name = "ms-graph"
version = "0.1.0"
description = "Microsoft Graph Api"
authors = ["Yuri Motoshima <yuri.motoshima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.2"}
email-validator = "^2.1.1"
pytest-httpx = "^0.30.0"
taskipy = "^1.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
isort = "^5.13.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings --cov=. --cov-report=term-missing --cov-fail-under=80'

# Add coverage options to exclude files and directories
[tool.coverage.run]
omit = [
    "images/*",
    "*/__init__.py"
]

[tool.taskipy.tasks]
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
clear = "isort . && powershell -Command \"Get-ChildItem -Path . -Recurse -Directory -Filter '__pycache__' | Remove-Item -Recurse -Force\""
